yaml/kubernetes.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: react-fastapi-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-fastapi-sample
  template:
    metadata:
      labels:
        app: react-fastapi-sample
    spec:
      containers:
        - name: react-fastapi-sample
          image: ghcr.io/hakan-persson/react-fastapi-sample:main
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "300m"
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 45
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 45
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          securityContext: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: react-fastapi-sample
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: http
  selector:
    app: react-fastapi-sample
  type: ClusterIP
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: react-fastapi-sample
  labels:
    app: react-fastapi-sample
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "http"
    # nginx.ingress.kubernetes.io/proxy-body-size: 0
    # nginx.ingress.kubernetes.io/whitelist-source-range: 178.174.212.174/32
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - react-fastapi-sample.dev.scoutapp.se
      secretName: react-fastapi-sample-tls-secret
  rules:
    - host: react-fastapi-sample.dev.scoutapp.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-fastapi-sample
                port:
                  number: 8000
---
apiVersion: v1
kind: Pod
metadata:
  name: "sample-test-connection"
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['react-fastapi-sample:8000']
      resources:
        limits:
          memory: "128Mi"
          cpu: "300m"
  restartPolicy: Never
